Update constructors and toString methods for builder classes
Avoid logging apiKeys